# certificate_carver

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
.github/workflows/: audit-scheduled.yml  tests-pr.yml  tests.yml
afl-fuzz/: .gitignore  Cargo.toml  README.md
afl-fuzz/src/: main.rs
benches/: carve.rs  run.rs
ci/: before_deploy.ps1  before_deploy.sh  install.sh  sccache.toml  script.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzzer_carve.rs
roots/: argon-xenon.json  daedalus.json  digicert-ct1.json  dodo.json  download.sh  gorgon.json  icarus.json  mammoth-sabre.json  nessie-yeti.json  nimbus.json  pilot-daedalus.json  zotrus.json
src/: crtsh.rs  ctlog.rs  ldapprep.rs  lib.rs  main.rs  mocks.rs  pdfblobs.rs  pdfsig.rs  x509.rs
src/tests/: fullchain.pem
tests/: mock_crtsh.rs  mock_log.rs  mocks.rs  test_carve.rs  test_cross_sign.rs  test_crtsh.rs  test_der_too_short.rs  test_dn_hash.rs  test_format_names.rs  test_issued.rs  test_not_after.rs  test_offset.rs  test_pem_too_short.rs  test_run.rs  utils.rs
tests/cmd/: help.trycmd
tests/files/bespoke/: 1000.pem  1001.pem  certindex  certindex.old  intermediate_a.key  intermediate_b.key  rootca.conf  rootca.crt  rootca.key
tests/files/bespoke/intermediate_a/: 1000.pem  certindex  intermediate_a.conf  intermediate_b_signed_by_intermediate_a.csr
tests/files/bespoke/intermediate_b/: certindex  intermediate_a_signed_by_intermediate_b.crt  intermediate_a_signed_by_intermediate_b.csr  intermediate_b.conf
tests/files/collected/: OJ_L_2014_189_FULL.xml
tests/files/davidsherenowitsa.party/: cert.der
tests/mocks/: mod.rs
tests/roots/: daedalus.json  dodo.json  icarus.json  mammoth.json  plausible.json
tests/utils/: mod.rs
