[package]
name = "certificate_carver"
version = "0.1.7-alpha"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"
default-run = "certificate_carver"

[dependencies]
async-std = "1.8.0"
base64 = "0.13"
chrono = "0.4.19"
clap = "2.33.3"
encoding = "0.2"
futures-core = "0.3.21"
hex = "0.4"
json = "0.12.4"
jwalk = "0.6.0"
lazy_static = "1.4"
log = "0.4.14"
memmem = "0.1.1"
rayon = "1.5.1"
sha2 = "0.10"
sled = "0.34.2"
stderrlog = "0.5.1"
stringprep = "0.1.2"
surf = "2.1.0"
unicode-normalization = "0.1"
untrusted = "0.9.0"
zip = "0.5"

[dependencies.regex]
version = "1.4"
default-features = false
features = ["std", "perf"]
