[package]
name = "certificate_carver"
version = "0.1.7-alpha"
authors = ["David Cook <divergentdave@gmail.com>"]
edition = "2021"
default-run = "certificate_carver"

[dependencies]
async-std = "1.12.0"
base64 = "0.13"
chrono = "0.4.22"
clap = "4.0.19"
encoding = "0.2"
futures-core = "0.3.25"
hex = "0.4"
json = "0.12.4"
jwalk = "0.6.0"
lazy_static = "1.4"
log = "0.4.17"
memmem = "0.1.1"
rayon = "1.5.3"
sha2 = "0.10"
sled = "0.34.7"
stderrlog = "0.5.4"
stringprep = "0.1.2"
surf = "2.3.2"
unicode-normalization = "0.1"
untrusted = "0.9.0"
zip = "0.5"
trycmd = "0.14.3"

[dependencies.regex]
version = "1.4"
default-features = false
features = ["std", "perf"]
